# bevy_rhai

./: Cargo.toml  LICENCE  README.md
.github/workflows/: ci.yml
assets/: increment.rhai
examples/: custom.rs  increment.rs  simple.rs
src/: asset.rs  component.rs  components.rs  lib.rs
