[package]
name = "bevy_rhai"
version = "0.1.0"
edition = "2021"

description = "An easy way to integrate Rhai with Bevy."
repository = "https://githib.com/leonskidev/bevy_rhai"
license = "ISC OR Apache-2.0"
readme = "README.md"

keywords = ["bevy", "rhai"]
categories = ["game-development"]

[dependencies]
bevy = { version = "0.6", default-features = false }
rhai = { version = "1.6", features = ["sync"] }
anyhow = "1.0"

[dev-dependencies]
bevy = { version = "0.6", default-features = false, features = ["dynamic"] }
