[package]
name = "bevy_rhai"
version = "0.2.0"
edition = "2021"

description = "An easy way to integrate Rhai with Bevy."
repository = "https://github.com/leonskidev/bevy_rhai"
license = "ISC OR Apache-2.0"
readme = "README.md"

keywords = ["bevy", "rhai"]
categories = ["game-development"]

[dependencies]
bevy_ecs = "0.7"
bevy_asset = "0.7"
bevy_reflect = "0.7"
bevy_app = "0.7"

rhai = { version = "1.6", features = ["sync"] }
anyhow = "1.0"

[dev-dependencies]
bevy = { version = "0.7", default-features = false, features = ["dynamic"] }
