[package]
name = "bevy_rhai"
version = "0.3.0"
edition = "2021"

description = "An easy way to integrate Rhai with Bevy."
repository = "https://github.com/leonskidev/bevy_rhai"
license = "ISC OR Apache-2.0"
readme = "README.md"

keywords = ["bevy", "rhai"]
categories = ["game-development"]

[dependencies]

bevy_ecs = {  git = "https://github.com/bevyengine/bevy.git"}
bevy_asset = {  git = "https://github.com/bevyengine/bevy.git"}
bevy_reflect = {  git = "https://github.com/bevyengine/bevy.git"}
bevy_app ={  git = "https://github.com/bevyengine/bevy.git"}

rhai = { version = "1.6", features = ["sync"] }
anyhow = "1.0"

[dev-dependencies]
bevy = {   git = "https://github.com/bevyengine/bevy.git", features = ["dynamic"] }
